# cro-irozhlas-app

./: .dockerignore  .gitignore  README.md  page.html  pyproject.toml  setup.cfg
.docker/: Dockerfile
.github/workflows/: main.yml
src/: __main__.py
src/cro/irozhlas/: __main__.py
src/cro/irozhlas/analyser/: __init__.py
src/cro/irozhlas/scraper/: __init__.py
src/irozhlas_scraper/: __init__.py  __main__.py
src/irozhlas_scraper/analysis/: README.md  __init__.py
src/irozhlas_scraper/geneea/: README.md  Untitled-1.json  __main__.py  setup.py
src/irozhlas_scraper/scraping/: __init__.py
src/irozhlas_scraper/website/: __init__.py
src/namespace/package/: __init__.py  __main__.py
tests/: test_changecase.py  test_loader.py  test_main.py  test_version.py
tests/scraping/: test_main.py
