# [project]
# name = "template_python_package"
# version = "0.1.0"
# description = "Python package project template"
# authors = [
#     "David Landa <david.landa@protonmail.com>"
# ]
# license = "MIT"
# readme = "README.md"
# python = "^3.8"
# homepage = "https://github.com/groundf/Template-Python-Package"
# repository = "https://github.com/groundf/Template-Python-Package"
# documentation = "https://github.com/groundf/Template-Python-Package"

# keywords = ["packaging", "dependency"]

# classifiers = [
#     "Topic :: Software Development",
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent"

# ]

# [dependencies]
# Click = "^7.0"

# [dev-dependencies]
# black = { version = "^18.3-alpha.0", python = "^3.8" }

# # [scripts]
# # poetry = "infer_pyproject.cli:main"

# [build-system]
# requires = [
#     "setuptools >= 35.0.2",
#     "setuptools_scm >= 2.0.0, <3"
# ]
# build-backend = "setuptools.build_meta"

# [tool.black]
# line-length = 88
# target_version = ['py38']
# include = '\.pyi?$'
# exclude = '''
# (
#   /(
#       \.eggs         # exclude a few common directories in the
#     | \.git          # root of the project
#     | \.hg
#     | \.mypy_cache
#     | \.tox
#     | \.venv
#     | _build
#     | buck-out
#     | build
#     | dist
#   )/
#   | foo.py           # also separately exclude a file named foo.py in
#                      # the root of the project
# )
# '''

# [tool.mypy]
# python_version = 3.9
# warn_return_any = "True"
# warn_unused_configs = "True"

# [options]
# python_requires = >=3.8

# package_dir =
#     =src
# packages = find_namespace:

# [options.packages.find]
# where = src

# [options.extras_require]
# test = faker; pytest
# lint = black; isort; flake8
# docs = pdoc

# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
# testpaths = [
#     "tests",
#     "integration"
# ]