[metadata]
name = Irozhlas_Scraper
version = 0.1.0
author = Krystof Pesek
author_email = krystof.pesek@gmail.com
description = Python port of irozhlas-scraper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czech-radio/irozhlas-scraper-python
project_urls =
    Bug Tracker = https://github.com/czech-radio/irozhlas-scraper-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >=3.8

install_requires =
    tqdm

package_dir =
    =src
packages = find

[options.packages.find]
where = src

[options.extras_require]
test = faker; pytest
lint = black; isort; flake8
docs = sphinx

[options.entry_points]
console_scripts =
    program=namespace.package.__main__:main

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
# testpaths = [
#     "tests",
#     "integration"
# ]

[tool.mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
