[metadata]
name = cro-irozhlas-app
version = attr: cro.irozhlas.__version__
author = Czech Radio
author_email = krystof.pesek@rozhlas.cz
description = Scrape and analyze the iRozhlas page content.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czech-radio/cro-irozhlas-app
project_urls =
    Bug Tracker = https://github.com/czech-radio/cro-irozhlas-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >=3.8

install_requires =
    tqdm
    beautifulsoup4
    requests
    cro-geneea-client @ git+https://github.com/czech-radio/cro-geneea-client.git

package_dir =
    = src

packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
test = pytest
lint = black; isort; flake8
docs = sphinx
web = flask

[options.entry_points]
console_scripts =
    cro-irozhlas=cro.irozhlas.__main__:main
   
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
